maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:92: error: not found: value bonneDir
    bonneDir = lDir(3)
    ^